Agentforce/force-app/main/default/objects/SWOT__c/SWOT__c.object-meta.xml
<CustomObject>
    <description>AD-430 - object to capture SWOT Details against an Account (Strengths, Weaknesses, Opportunities, Threats)</description>
    <label>SWOT Analysis</label>
    <nameField>
        <label>SWOT Analysis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SWOT Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>