Agentforce/force-app/main/default/objects/SWOT__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>AD-430 - master detail relationship to the Account from the SWOT object</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>SWOT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>