Agentforce/force-app/main/default/objects/SWOT__c/fields/Account_Sector__c.field-meta.xml
<CustomField>
    <fullName>Account_Sector__c</fullName>
    <description>Account Sector</description>
    <formula>TEXT(Account__r.OCS_Sector__c)</formula>
    <label>Account Sector</label>
    <type>Text</type>
</CustomField>