Agentforce/force-app/main/default/objects/SWOT__c/fields/Account_Sub_Sector__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Sector__c</fullName>
    <description>Account Sub-Sector</description>
    <formula>TEXT(Account__r.OCS_Sub_Sector__c)</formula>
    <label>Account Sub-Sector</label>
    <type>Text</type>
</CustomField>