Agentforce/force-app/main/default/objects/SWOT__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <description>AD-430 - text field to capture the opportunity details</description>
    <label>Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>