Agentforce/force-app/main/default/objects/SWOT__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <description>AD-430 - text field to capture the strength details</description>
    <label>Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>