Agentforce/force-app/main/default/objects/SWOT__c/fields/SWOT_Analysis_Completed__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Analysis_Completed__c</fullName>
    <description>AD-430 - date to capture when the SWOT analysis was completed</description>
    <label>SWOT Analysis Completed</label>
    <type>Date</type>
</CustomField>