Agentforce/force-app/main/default/objects/SWOT__c/fields/SWOT_Analysis_Updated__c.field-meta.xml
<CustomField>
    <fullName>SWOT_Analysis_Updated__c</fullName>
    <description>AD-430 - date to capture when the SWOT analysis was completed
Field Name Updated 2309</description>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>