Agentforce/force-app/main/default/objects/SWOT__c/fields/Threats__c.field-meta.xml
<CustomField>
    <fullName>Threats__c</fullName>
    <description>AD-420 - text field to capture the threat details</description>
    <label>Threats</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>