Agentforce/force-app/main/default/objects/SWOT__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <description>AD-430 - text field to capture the weakness details</description>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>