Agentforce/force-app/main/default/objects/SWOT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Strengths__c</columns>
    <columns>Weaknesses__c</columns>
    <columns>Opportunities__c</columns>
    <columns>Threats__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>