Agentforce/force-app/main/default/objects/SWOT__c/listViews/My_SWOT.listView-meta.xml
<ListView>
    <fullName>My_SWOT</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account__c</columns>
    <columns>Strengths__c</columns>
    <columns>Weaknesses__c</columns>
    <columns>Opportunities__c</columns>
    <columns>Threats__c</columns>
    <filterScope>Mine</filterScope>
    <label>My SWOT</label>
</ListView>